--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -24,7 +24,7 @@
   "scripts": {
     "watch": "tsc --watch",
     "build": "tsc -p tsconfig.build.json",
-    "postbuild": "cp package.json ./build && mkdir -p ./zkeys",
+    "postbuild": "cp package.json ./build",
     "types": "tsc -p tsconfig.json --noEmit",
     "docs": "typedoc --plugin typedoc-plugin-markdown --options ./typedoc.json"
   },
