--- a/package.json
+++ b/package.json
@@ -12,24 +12,21 @@
     "setup:zkeys": "NODE_OPTIONS=--max-old-space-size=4096 lerna run generate-zkeys --scope \"@maci-protocol/circuits\"",
     "clean": "lerna exec -- rm -rf node_modules build && rm -rf node_modules",
     "commit": "git cz",
-    "download-zkeys:test": "ts-node ./.github/scripts/downloadZkeys.ts test ./packages/testing/zkeys",
-    "download-zkeys:test:relayer": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/relayer/zkeys",
-    "download-zkeys:test:coordinator": "ts-node ./.github/scripts/downloadZkeys.ts test ./apps/coordinator/zkeys",
-    "download-zkeys:ceremony": "ts-node ./.github/scripts/downloadZkeys.ts prod ./packages/testing/zkeys",
-    "download-zkeys:ceremony:relayer": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/relayer/zkeys",
-    "download-zkeys:ceremony:coordinator": "ts-node ./.github/scripts/downloadZkeys.ts prod ./apps/coordinator/zkeys",
+    "download-zkeys:test": "ts-node ./.github/scripts/downloadZkeys.ts test ./zkeys",
+    "download-zkeys:ceremony": "ts-node ./.github/scripts/downloadZkeys.ts prod ./zkeys",
     "prettier": "prettier -c .",
     "prettier:fix": "prettier -w .",
     "lint:ts": "eslint './**/**/*.ts' './**/**/*.tsx'",
     "lint:ts:fix": "pnpm run lint:ts --fix",
     "lint:sol": "solhint './packages/contracts/contracts/**/*.sol'",
     "lint:sol:fix": "pnpm run lint:sol --fix --noPrompt",
-    "test:ceremony": "lerna run test:ceremony --scope \"@maci-protocol/testing\"",
     "test:integration": "lerna run test:integration --scope \"@maci-protocol/testing\"",
     "test:e2e": "lerna run test:e2e --scope \"@maci-protocol/testing\"",
     "test:unit": "lerna run test:unit --scope \"@maci-protocol/testing\"",
     "test:hardhat": "lerna run test:hardhat --scope \"@maci-protocol/contracts\"",
     "test": "lerna run test --ignore \"@maci-protocol/testing\"",
+    "test:relayer": "lerna run test --scope \"@maci-protocol/relayer\"",
+    "test:coordinator": "lerna run test --scope \"@maci-protocol/coordinator\"",
     "types": "lerna run types",
     "docs": "lerna run docs",
     "prepare": "is-ci || husky",
