chore: upgrade node to v24

--- a/pnpm-workspace.yaml
+++ b/pnpm-workspace.yaml
@@ -1,3 +1,19 @@
 packages:
-  - "packages/*"
-  - "apps/*"
+  - packages/*
+  - apps/*
+
+onlyBuiltDependencies:
+  - "@ipshipyard/node-datachannel"
+  - "@nestjs/core"
+  - "@scarf/scarf"
+  - blake-hash
+  - core-js
+  - core-js-pure
+  - cpu-features
+  - keccak
+  - mongodb-memory-server
+  - nx
+  - protobufjs
+  - secp256k1
+  - ssh2
+  - unrs-resolver
