--- a/.github/workflows/nightly.yml
+++ b/.github/workflows/nightly.yml
@@ -115,3 +115,10 @@ jobs:
       - name: Stop Hardhat
         if: always()
         run: kill $(lsof -t -i:8545)
+
+      - name: Notify on failure
+        if: ${{ always() && (failure() || cancelled()) }}
+        run: |
+          curl -X POST -H 'Content-Type: application/json' \
+          -d '{"text": ":x: GitHub Actions job *${{ github.workflow }}* failed in *${{ github.repository }}* on branch *${{ github.ref }}*. [View run](${{ github.server_url }}/${{ github.repository }}/actions/runs/${{ github.run_id }})"}' \
+          ${{ secrets.WEBHOOK_URL }}
