chore: use type imports

--- a/apps/subgraph/package.json
+++ b/apps/subgraph/package.json
@@ -25,7 +25,7 @@
     "remove-local": "graph remove --node http://localhost:8020/ maci-subgraph",
     "deploy-local": "graph deploy --node http://localhost:8020/ --ipfs http://localhost:5001 maci-subgraph --network localhost",
     "deploy:mainnet": "graph deploy --node https://api.studio.thegraph.com/deploy/ maci-subgraph --network mainnet",
-    "test": "graph test",
+    "test": "graph test -v 0.6.0",
     "test:coverage": "graph test && graph test -c"
   },
   "dependencies": {
